force-app/main/default/objects/Used_Car__c/Used_Car__c.object-meta.xml
<CustomObject>
    <description>Used Vehicles</description>
    <label>Used Car</label>
    <nameField>
        <displayFormat>ID-{0000}</displayFormat>
        <label>ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Used Cars</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>