force-app/main/default/objects/Used_Car__c/fields/Banana_Capacity__c.field-meta.xml
<CustomField>
    <fullName>Banana_Capacity__c</fullName>
    <description>Total number of bananas that will fit inside the vehicle</description>
    <label>Banana Capacity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>