force-app/main/default/objects/Used_Car__c/fields/Reliability__c.field-meta.xml
<CustomField>
    <fullName>Reliability__c</fullName>
    <label>Reliability</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>