force-app/main/default/objects/Used_Car__c/fields/Sub_Model1__c.field-meta.xml
<CustomField>
    <fullName>Sub_Model1__c</fullName>
    <label>Sub Model1</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Model1__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>B</fullName>
            </value>
            <value>
                <fullName>A</fullName>
            </value>
            <value>
                <fullName>N</fullName>
            </value>
            <value>
                <fullName>S</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>