force-app/main/default/objects/Used_Car__c/recordTypes/Type.recordType-meta.xml
<RecordType>
    <fullName>Type</fullName>
    <active>true</active>
    <description>type of vehicle</description>
    <label>Type</label>
</RecordType>