force-app/main/default/objects/Used_Car__c/listViews/Customer_View.listView-meta.xml
<ListView>
    <fullName>Customer_View</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <label>Customer View</label>
</ListView>