force-app/main/default/objects/Used_Car__c/listViews/Used_Cars.listView-meta.xml
<ListView>
    <fullName>Used_Cars</fullName>
    <columns>NAME</columns>
    <columns>Mileage__c</columns>
    <columns>Type__c</columns>
    <filterScope>Mine</filterScope>
    <label>Used Cars</label>
</ListView>